--- a/src/MinimalWorker/MinimalWorker.csproj
+++ b/src/MinimalWorker/MinimalWorker.csproj
@@ -1,9 +1,23 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
-        <TargetFramework>net9.0</TargetFramework>
-        <ImplicitUsings>enable</ImplicitUsings>
-        <Nullable>enable</Nullable>
+      <TargetFramework>net9.0</TargetFramework>
+      <ImplicitUsings>enable</ImplicitUsings>
+      <Nullable>enable</Nullable>
+    </PropertyGroup>
+
+    <!--Nuget Package Metadata-->
+    <PropertyGroup>        
+      <Authors>Joshua Jesper Krægpøth Ryder</Authors>
+      <Company>TopSwagCode</Company>
+      <PackageId>MinimalWorker</PackageId>
+      <Description>MinimalWorker is a lightweight .NET library that simplifies background worker registration in ASP.NET Core and .NET applications using the `IHost` interface. It offers two simple extension methods to map background tasks that run continuously or periodically, with support for dependency injection and cancellation tokens.</Description>
+      <PackageProjectUrl>https://github.com/TopSwagCode/MinimalWorker</PackageProjectUrl>
+      <RepositoryUrl>https://github.com/TopSwagCode/MinimalWorker</RepositoryUrl>
+      <RepositoryType>git</RepositoryType>
+      <PackageTags>TopSwagCode, AspNet, AspNetCore, NetCore, Background, Recurring, Tasks</PackageTags>
+      <PackageLicenseExpression>MIT</PackageLicenseExpression>
+      <Copyright>Copyright © 2025 Joshua Jesper Krægpøth Ryder</Copyright>
     </PropertyGroup>
 
     <ItemGroup>
