--- a/src/MinimalWorker/MinimalWorker.csproj
+++ b/src/MinimalWorker/MinimalWorker.csproj
@@ -24,4 +24,8 @@
       <PackageReference Include="Microsoft.Extensions.Hosting.Abstractions" Version="9.0.4" />
     </ItemGroup>
 
+    <ItemGroup>
+      <None Include="README.md" Pack="true" PackagePath="" />
+    </ItemGroup>
+
 </Project>
