--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -30,6 +30,9 @@ jobs:
     - name: Build
       run: dotnet build src/MinimalWorker --configuration Release --no-restore
 
+    - name: Run tests
+      run: dotnet test src/MinimalWorker.Test --configuration Release --no-build --verbosity normal
+
     - name: Pack NuGet package
       run: dotnet pack src/MinimalWorker --configuration Release --no-build --output ./nupkgs -p:Version=${{ env.VERSION }}
 
