--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -25,10 +25,10 @@ jobs:
       run: echo "VERSION=${GITHUB_REF#refs/tags/v}" >> $GITHUB_ENV
 
     - name: Restore dependencies
-      run: dotnet restore src/MinimalWorker test/MinimalWorker.Test
+      run: dotnet restore MinimalWorker.sln
     
     - name: Build
-      run: dotnet build src/MinimalWorker test/MinimalWorker.Test --configuration Release --no-restore
+      run: dotnet build MinimalWorker.sln --configuration Release --no-restore
     
     - name: Run tests
       run: dotnet test test/MinimalWorker.Test --configuration Release --no-build --verbosity normal
