--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -24,15 +24,18 @@ jobs:
       id: get_version
       run: echo "VERSION=${GITHUB_REF#refs/tags/v}" >> $GITHUB_ENV
 
+    - name: Move into project folder
+      run: cd MinimalWorker
+
     - name: Restore dependencies
       run: dotnet restore MinimalWorker.sln
-    
+
     - name: Build
       run: dotnet build MinimalWorker.sln --configuration Release --no-restore
-    
+
     - name: Run tests
-      run: dotnet test test/MinimalWorker.Test --configuration Release --no-build --verbosity normal
-    
+      run: dotnet test MinimalWorker.sln --configuration Release --no-build --verbosity normal
+
 
     - name: Pack NuGet package
       run: dotnet pack src/MinimalWorker --configuration Release --no-build --output ./nupkgs -p:Version=${{ env.VERSION }}
