--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -16,26 +16,17 @@ jobs:
     - name: Setup .NET
       uses: actions/setup-dotnet@v4
       with:
-        dotnet-version: |
-          8.0.x
-          9.0.x
+        dotnet-version: '9.0.x'
 
     - name: Extract version from tag
       id: get_version
       run: echo "VERSION=${GITHUB_REF#refs/tags/v}" >> $GITHUB_ENV
 
     - name: Restore dependencies
-      run: |
-        dotnet restore src/MinimalWorker
-        dotnet restore test/MinimalWorker.Test
-        
-    - name: Build
-      run: |
-        dotnet build src/MinimalWorker --configuration Release --no-restore
-        dotnet build test/MinimalWorker.Test --configuration Release --no-restore
+      run: dotnet restore src/MinimalWorker
 
-    - name: Run tests
-      run: dotnet test test/MinimalWorker.Test --configuration Release --no-build --verbosity normal
+    - name: Build
+      run: dotnet build src/MinimalWorker --configuration Release --no-restore
 
     - name: Pack NuGet package
       run: dotnet pack src/MinimalWorker --configuration Release --no-build --output ./nupkgs -p:Version=${{ env.VERSION }}
