--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -23,12 +23,19 @@ jobs:
       run: echo "VERSION=${GITHUB_REF#refs/tags/v}" >> $GITHUB_ENV
 
     - name: Restore dependencies
-      run: |
-        dotnet restore src/MinimalWorker
-        dotnet restore test/MinimalWorker.Test
+      run: dotnet restore src/MinimalWorker
 
     - name: Build
       run: dotnet build src/MinimalWorker --configuration Release --no-restore
+
+    - name: Restore dependencies
+      run: dotnet restore test/MinimalWorker.Test
+
+    - name: Build
+      run: dotnet build test/MinimalWorker.Test --configuration Release --no-restore
+
+    - name: Test
+      run: dotnet test test/MinimalWorker.Test --configuration Release --no-restore
 
     - name: Pack NuGet package
       run: dotnet pack src/MinimalWorker --configuration Release --no-build --output ./nupkgs -p:Version=${{ env.VERSION }}
