--- a/samples/MinimalWorker.Api.Sample/MinimalWorker.Api.Sample.csproj
+++ b/samples/MinimalWorker.Api.Sample/MinimalWorker.Api.Sample.csproj
@@ -12,6 +12,9 @@
 
     <ItemGroup>
       <ProjectReference Include="..\MinimalWorker.Shared.Sample\MinimalWorker.Shared.Sample.csproj" />
+      <ProjectReference Include="..\..\src\MinimalWorker.Generators\MinimalWorker.Generators.csproj" 
+                        OutputItemType="Analyzer" 
+                        ReferenceOutputAssembly="false" />
     </ItemGroup>
 
 </Project>
