--- a/samples/MinimalWorker.Console.Sample/MinimalWorker.Console.Sample.csproj
+++ b/samples/MinimalWorker.Console.Sample/MinimalWorker.Console.Sample.csproj
@@ -9,6 +9,9 @@
 
     <ItemGroup>
       <ProjectReference Include="..\MinimalWorker.Shared.Sample\MinimalWorker.Shared.Sample.csproj" />
+      <ProjectReference Include="..\..\src\MinimalWorker.Generators\MinimalWorker.Generators.csproj" 
+                        OutputItemType="Analyzer" 
+                        ReferenceOutputAssembly="false" />
     </ItemGroup>
 
     <ItemGroup>
