--- a/src/MinimalWorker/MinimalWorker.csproj
+++ b/src/MinimalWorker/MinimalWorker.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
-      <TargetFrameworks>net8.0;net9.0</TargetFrameworks>
+      <TargetFramework>net9.0</TargetFramework>
       <ImplicitUsings>enable</ImplicitUsings>
       <Nullable>enable</Nullable>
     </PropertyGroup>
@@ -27,8 +27,15 @@
     </PropertyGroup>
 
     <ItemGroup>
-      <PackageReference Include="Microsoft.Extensions.Hosting.Abstractions" Version="9.0.4" />
-      <PackageReference Include="NCrontab" Version="3.3.3" />
+        <PackageReference Include="Microsoft.Extensions.Hosting.Abstractions" Version="9.0.4" />
+        <PackageReference Include="NCrontab" Version="3.3.3" />
+    </ItemGroup>
+    
+    <!-- Generator is packaged with the library but not applied to itself -->
+    <ItemGroup>
+        <ProjectReference Include="..\MinimalWorker.Generators\MinimalWorker.Generators.csproj" 
+                          Pack="true"
+                          PrivateAssets="none" />
     </ItemGroup>
 
     <ItemGroup>
