--- a/src/MinimalWorker/MinimalWorker.csproj
+++ b/src/MinimalWorker/MinimalWorker.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
-      <TargetFrameworks>net8.0;net9.0</TargetFrameworks>
+      <TargetFrameworks>net8.0;net9.0;net10.0</TargetFrameworks>
       <ImplicitUsings>enable</ImplicitUsings>
       <Nullable>enable</Nullable>
     </PropertyGroup>
@@ -29,6 +29,11 @@
     <ItemGroup>
         <PackageReference Include="Microsoft.Extensions.Hosting.Abstractions" Version="9.0.4" />
         <PackageReference Include="NCrontab" Version="3.3.3" />
+    </ItemGroup>
+    
+    <!-- Expose internal members to test project -->
+    <ItemGroup>
+        <InternalsVisibleTo Include="MinimalWorker.Test" />
     </ItemGroup>
     
     <!-- Build the generator during build, but don't include as package reference -->
