--- a/src/MinimalWorker/MinimalWorker.csproj
+++ b/src/MinimalWorker/MinimalWorker.csproj
@@ -29,6 +29,7 @@
     <ItemGroup>
         <PackageReference Include="Microsoft.Extensions.Hosting.Abstractions" Version="9.0.4" />
         <PackageReference Include="NCrontab" Version="3.3.3" />
+        <PackageReference Include="System.Diagnostics.DiagnosticSource" Version="9.0.4" />
     </ItemGroup>
     
     <!-- Expose internal members to test project -->
