--- a/samples/MinimalWorker.OpenTelemetry.Sample/otel-collector-config.yml
+++ b/samples/MinimalWorker.OpenTelemetry.Sample/otel-collector-config.yml
@@ -34,7 +34,7 @@ exporters:
   # Export metrics to Prometheus (via Prometheus exporter)
   prometheus:
     endpoint: "0.0.0.0:8889"
-    namespace: "minimalworker"
+    # Namespace removed - metrics already prefixed by MinimalWorker meter name
 
   # Export logs to Loki
   loki:
