--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,6 +12,7 @@ on:
 jobs:
   build-and-test:
     runs-on: ubuntu-latest
+    if: github.event_name != 'push' || github.event.pull_request == null
 
     steps:
     - name: Checkout code
