adding code coverage

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,7 +13,7 @@ permissions:
 jobs:
   build-and-test:
     runs-on: ubuntu-latest
-    
+
     strategy:
       matrix:
         dotnet-version: ['8.0.x', '9.0.x', '10.0.x']
@@ -34,9 +34,16 @@ jobs:
     - name: Build
       run: dotnet build MinimalWorker.sln --configuration Release --no-restore
 
-    - name: Test
-      run: dotnet test MinimalWorker.sln --configuration Release --no-build --verbosity normal --logger "trx;LogFileName=test-results.trx"
-    
+    - name: Test with Coverage
+      run: |
+        dotnet test MinimalWorker.sln \
+          --configuration Release \
+          --no-build \
+          --verbosity normal \
+          --logger "trx;LogFileName=test-results.trx" \
+          --collect:"XPlat Code Coverage" \
+          --results-directory ./coverage
+
     - name: Publish Test Results
       uses: dorny/test-reporter@v1
       if: always()
@@ -45,3 +52,14 @@ jobs:
         path: '**/test-results.trx'
         reporter: dotnet-trx
         fail-on-error: true
+
+    - name: Upload Coverage to Codecov
+      uses: codecov/codecov-action@v4
+      if: matrix.dotnet-version == '9.0.x'
+      with:
+        token: ${{ secrets.CODECOV_TOKEN }}
+        files: ./coverage/**/coverage.cobertura.xml
+        flags: unittests
+        name: codecov-minimalworker
+        fail_ci_if_error: false
+        verbose: true
