--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -38,7 +38,12 @@ jobs:
     - name: Restore dependencies
       run: dotnet restore MinimalWorker.sln
 
+    - name: Test (no coverage)
+      if: matrix.framework != 'net10.0'
+      run: dotnet test MinimalWorker.sln --no-restore -f ${{ matrix.framework }}
+
     - name: Test with Coverage
+      if: matrix.framework == 'net10.0'
       run: |
         dotnet test MinimalWorker.sln \
           --no-restore \
@@ -52,14 +57,14 @@ jobs:
       uses: dorny/test-reporter@v1
       if: always()
       with:
-        name: Test Results (.NET ${{ matrix.dotnet-version }})
+        name: Test Results (${{ matrix.framework }})
         path: '**/test-results.trx'
         reporter: dotnet-trx
         fail-on-error: true
 
     - name: Upload Coverage to Codecov
       uses: codecov/codecov-action@v4
-      if: matrix.dotnet-version == '9.0.x'
+      if: matrix.framework == 'net10.0'
       with:
         token: ${{ secrets.CODECOV_TOKEN }}
         files: ./coverage/**/coverage.cobertura.xml
